--- a/index.html
+++ b/index.html
@@ -1,12 +1,174 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Корзина</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Вход</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Седона</h1>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+      <img class="logo" src="#" alt="Логотип Седона">
+      <section class="info" id="info">
+        <h2 class="info-title">
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </h2>
+        <p class="info-text">
+          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+        </p>
+        <ul class="info-list">
+          <li class="info-item">
+            <h3 class="info-item-title">Настоящий городок</h3>
+            <p class="info-item-text">
+              Седона — не аттракцион для туристов, там течёт своя жизнь
+            </p>
+          </li>
+          <li class="info-item">
+            <h3 class="info-item-title">Небольшая площадь</h3>
+            <p class="info-item-text">
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
+          <li class="info-item">
+            <h3 class="info-item-title">Красивая дорога</h3>
+            <p class="info-item-text">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li class="info-item">
+            <h3 class="info-item-title">Мало туристов</h3>
+            <p class="info-item-text">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </li>
+          <li class="info-item">
+            <img class="info-item-img" src="#" alt="видна городок">
+            <div class="info-item-wrap">
+              <h3 class="info-item-title">Там есть мост дьявола</h3>
+              <p class="info-item-text">
+                Да, по нему можно пройти! Если вы осмелитесь, разумеется
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="advantages">
+        <h2 class="advantages-title">
+          Приезжайте в Седону отдохнуть в комфорте и уюте!
+        </h2>
+        <p class="advantages-text">
+          Опытный персонал и качественное обслуживание!
+        </p>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <img class="advantages-item-img" src="#" alt="Дом">
+            <h3 class="advantages-item-title">Жильё</h3>
+            <p class="advantages-item-text">
+              Рекомендуем пожитьв настоящем мотеле, всё как в кино!
+            </p>
+          </li>
+          <li class="advantages-item">
+            <img class="advantages-item-img" src="#" alt="Бургер">
+            <h3 class="advantages-item-title">Еда</h3>
+            <p class="advantages-item-text">
+              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+            </p>
+          </li>
+          <li class="advantages-item">
+            <img class="advantages-item-img" src="#" alt="Подарочная коробка с бантиком">
+            <h3 class="advantages-item-title">Сувениры</h3>
+            <p class="advantages-item-text">
+              Не только китайского, но и настоящего местного производства!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="hotel-search">
+        <h2 class="hotel-search-title">Заинтересовались?</h2>
+        <p class="hotel-search-text">
+          Укажите предполагаемые даты поездки,и мы покажем вам лучшие
+          предложения гостиниц в Седоне
+        </p>
+        <a class="btn hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
+      </section>
+      <section class="newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-text">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form class="newsletter-form" action="http://echo.htmlacademy.ru/" method="post">
+          <label for="newsletter-email"></label>
+          <input class="newsletter-form-input" type="email" name="newsletter-email" id="newsletter-email" placeholder="Ваш e-mail">
+          <button type="submit">Подписаться</button>
+        </form>
+      </section>
+    <footer class="footer">
+        <section class="footer-social">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="footer-social-item-link" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Vkontakte</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-item-link" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Telegram</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-item-link" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Youtube</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer-contacts">
+          <h2 class="visually-hidden">Телефон для связи</h2>
+          <a class="footer-contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+        </section>
+        <section class="footer-site">
+          <h2 class="visually-hidden">Логотип htmlacademy</h2>
+          <a class="footer-site-logo" href="https://htmlacademy.ru/">
+            <img class="logo" src="img/htmlacademy-logo.svg" width="115" height="33" alt="Логотип html.academy">
+          </a>
+        </section>
+      </footer>
+    </main>
   </body>
+
 </html>
