--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -22,7 +22,7 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link" href="#" data-test="search">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
@@ -39,7 +39,7 @@
         </ul>
       </nav>
     </header>
-    <main class="main-catalog">
+    <main class="main-catalog" data-test="main">
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
@@ -53,7 +53,7 @@
           </li>
         </ul>
       </header>
-      <section class="catalog-products">
+      <section class="catalog-products" data-test="filter">
         <h2 class="visually-hidden">Список товаров с фильтрами</h2>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="catalog-filter-group">
@@ -231,7 +231,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" data-test="footer">
       <section class="footer-social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-social-list">
