--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -22,7 +22,7 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link" href="#" data-test="search">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
@@ -39,11 +39,11 @@
         </ul>
       </nav>
     </header>
-    <main class="main-index">
+    <main class="main-index" data-test="main">
       <h1 class="visually-hidden">Седона</h1>
 
       <img class="logo" src="#" alt="Логотип Седона">
-      <section class="info" id="info">
+      <section class="info" id="info" data-test="hero">
         <h2 class="info-title">
           Седона — небольшой городок в Аризоне, заслуживающий большего!
         </h2>
@@ -86,7 +86,7 @@
           </li>
         </ul>
       </section>
-      <section class="advantages">
+      <section class="advantages" data-test="advantages">
         <h2 class="advantages-title">
           Приезжайте в Седону отдохнуть в комфорте и уюте!
         </h2>
@@ -125,7 +125,7 @@
         </p>
         <a class="btn hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
-      <section class="newsletter">
+      <section class="newsletter" data-test="subscribe">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-text">
           Только полезная информация и никакого спама, честное бойскаутское!
@@ -136,7 +136,7 @@
           <button type="submit">Подписаться</button>
         </form>
       </section>
-    <footer class="footer">
+    <footer class="footer" data-test="footer">
         <section class="footer-social">
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="footer-social-list">
