--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <body>
     <header class="page-header" data-test="header">
+      <a class="page-header-logo" aria-current="page" href="index.html">
+        <img class="page-header-logo-img" src="/logo.svg" width="140" height="70" alt="Логотип сайта города Седона">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -20,29 +23,31 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#" data-test="search">
+        <ul class="navigation-user">
+          <li class="navigation-user-item">
+            <a class="navigation-user-link" href="#" data-test="search">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Корзина</span>
+          <li class="navigation-user-item">
+            <a class="navigation-user-link" href="#">
+              <span class="visually-hidden">Избранное</span>
+              <span>12</span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Вход</span>
+          <li class="navigation-user-item">
+            <a class="navigation-user-link" href="#"> Хочу сюда
             </a>
           </li>
         </ul>
       </nav>
     </header>
     <main class="main-index" data-test="main">
-      <h1 class="visually-hidden">Седона</h1>
-
-      <img class="logo" src="#" alt="Логотип Седона">
+      <h1 class="visually-hidden">Седона - город в Аризоне</h1>
+      <section class="hero">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <img class="hero-image" src="/hero-text.svg" width="458" height="352" alt='Welcome to the gorgeaus. SEDONA "Because the Grand Canyon sucks"'>
+      </section>
       <section class="info" id="info" data-test="hero">
         <h2 class="info-title">
           Седона — небольшой городок в Аризоне, заслуживающий большего!
@@ -52,10 +57,13 @@
         </p>
         <ul class="info-list">
           <li class="info-item">
-            <h3 class="info-item-title">Настоящий городок</h3>
-            <p class="info-item-text">
-              Седона — не аттракцион для туристов, там течёт своя жизнь
-            </p>
+            <div class="info-item-wrap">
+              <h3 class="info-item-title">Настоящий городок</h3>
+              <p class="info-item-text">
+                Седона — не аттракцион для туристов, там течёт своя жизнь
+              </p>
+            </div>
+            <img class="info-item-img" src="/photo-1.jpg" alt="Домики на фоне гор">
           </li>
           <li class="info-item">
             <h3 class="info-item-title">Небольшая площадь</h3>
@@ -76,7 +84,7 @@
             </p>
           </li>
           <li class="info-item">
-            <img class="info-item-img" src="#" alt="видна городок">
+            <img class="info-item-img" src="/photo-2.jpg" alt="Пейзаж: каньон, горы">
             <div class="info-item-wrap">
               <h3 class="info-item-title">Там есть мост дьявола</h3>
               <p class="info-item-text">
@@ -95,21 +103,18 @@
         </p>
         <ul class="advantages-list">
           <li class="advantages-item">
-            <img class="advantages-item-img" src="#" alt="Дом">
             <h3 class="advantages-item-title">Жильё</h3>
             <p class="advantages-item-text">
               Рекомендуем пожитьв настоящем мотеле, всё как в кино!
             </p>
           </li>
           <li class="advantages-item">
-            <img class="advantages-item-img" src="#" alt="Бургер">
             <h3 class="advantages-item-title">Еда</h3>
             <p class="advantages-item-text">
               Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
             </p>
           </li>
           <li class="advantages-item">
-            <img class="advantages-item-img" src="#" alt="Подарочная коробка с бантиком">
             <h3 class="advantages-item-title">Сувениры</h3>
             <p class="advantages-item-text">
               Не только китайского, но и настоящего местного производства!
@@ -125,46 +130,46 @@
         </p>
         <a class="btn hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
-      <section class="newsletter" data-test="subscribe">
-        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-        <p class="newsletter-text">
+      <section class="subscribe" data-test="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-text">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
-        <form class="newsletter-form" action="http://echo.htmlacademy.ru/" method="post">
-          <label for="newsletter-email"></label>
-          <input class="newsletter-form-input" type="email" name="newsletter-email" id="newsletter-email" placeholder="Ваш e-mail">
+        <form class="subscribe-form" action="http://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="subscribe-email">Укажите ваш e-mail</label>
+          <input class="subscribe-form-input" type="email" name="subscribe-user-email" id="subscribe-email" placeholder="Ваш e-mail">
           <button type="submit">Подписаться</button>
         </form>
       </section>
-    <footer class="footer" data-test="footer">
-        <section class="footer-social">
+      <footer class="footer" data-test="footer">
+        <section class="social">
           <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a class="footer-social-item-link" href="https://vk.com/htmlacademy">
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="social-item-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Vkontakte</span>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a class="footer-social-item-link" href="https://t.me/htmlacademy">
+            <li class="social-item">
+              <a class="social-item-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram</span>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a class="footer-social-item-link" href="https://www.youtube.com/user/htmlacademyru">
+            <li class="social-item">
+              <a class="social-item-link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
           </ul>
         </section>
-        <section class="footer-contacts">
+        <section class="contacts">
           <h2 class="visually-hidden">Телефон для связи</h2>
-          <a class="footer-contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+          <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
         </section>
-        <section class="footer-site">
+        <section class="site">
           <h2 class="visually-hidden">Логотип htmlacademy</h2>
-          <a class="footer-site-logo" href="https://htmlacademy.ru/">
-            <img class="logo" src="img/htmlacademy-logo.svg" width="115" height="33" alt="Логотип html.academy">
+          <a class="site-logo" href="https://htmlacademy.ru/">
+            <img class="logo" src="img/logo-htmlacademy.svg" width="115" height="33" alt="Логотип html.academy">
           </a>
         </section>
       </footer>
