--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="styles/styles.css" rel="stylesheet">
   </head>
 
   <body>
     <header class="page-header" data-test="header">
       <a class="page-header-logo" aria-current="page" href="index.html">
-        <img class="page-header-logo-img" src="/logo.svg" width="140" height="70" alt="Логотип сайта города Седона">
+        <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -46,7 +47,7 @@
       <h1 class="visually-hidden">Седона - город в Аризоне</h1>
       <section class="hero">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img class="hero-image" src="/hero-text.svg" width="458" height="352" alt='Welcome to the gorgeaus. SEDONA "Because the Grand Canyon sucks"'>
+        <img class="hero-image" src="images/hero-text.svg" width="458" height="352" alt='Welcome to the gorgeaus. SEDONA "Because the Grand Canyon sucks"'>
       </section>
       <section class="info" id="info" data-test="hero">
         <h2 class="info-title">
@@ -63,7 +64,7 @@
                 Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
             </div>
-            <img class="info-item-img" src="/photo-1.jpg" alt="Домики на фоне гор">
+            <img class="info-item-img" src="images/info/info-1.jpg" width="800" height="385" alt="Домики на фоне гор">
           </li>
           <li class="info-item">
             <h3 class="info-item-title">Небольшая площадь</h3>
@@ -84,7 +85,7 @@
             </p>
           </li>
           <li class="info-item">
-            <img class="info-item-img" src="/photo-2.jpg" alt="Пейзаж: каньон, горы">
+            <img class="info-item-img" src="images/info/info-2.jpg" width="800" height="385" alt="Пейзаж: каньон, горы">
             <div class="info-item-wrap">
               <h3 class="info-item-title">Там есть мост дьявола</h3>
               <p class="info-item-text">
@@ -169,7 +170,6 @@
         <section class="site">
           <h2 class="visually-hidden">Логотип htmlacademy</h2>
           <a class="site-logo" href="https://htmlacademy.ru/">
-            <img class="logo" src="img/logo-htmlacademy.svg" width="115" height="33" alt="Логотип html.academy">
           </a>
         </section>
       </footer>
