--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
 
   <body>
-    <header class="page-header" data-test="header">
+    <header class="page-header container" data-test="header">
       <a class="page-header-logo" aria-current="page" href="index.html">
         <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
       </a>
       <nav class="navigation">
-        <ul class="navigation-list">
+        <ul class="navigation-list clear-ul">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
           </li>
@@ -24,7 +24,7 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-user">
+        <ul class="navigation-user clear-ul">
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#" data-test="search">
               <span class="visually-hidden">Поиск</span>
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#"> Хочу сюда
+            <a class="navigation-user-link navigation-user-link--btn" href="#"> Хочу сюда!
             </a>
           </li>
         </ul>
@@ -49,18 +49,18 @@
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
         <img class="hero-image" src="images/hero-text.svg" width="458" height="352" alt='Welcome to the gorgeaus. SEDONA "Because the Grand Canyon sucks"'>
       </section>
-      <section class="info" id="info" data-test="hero">
+      <section class="info container" id="info" data-test="hero">
         <h2 class="info-title">
           Седона — небольшой городок в Аризоне, заслуживающий большего!
         </h2>
         <p class="info-text">
           Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
         </p>
-        <ul class="info-list">
-          <li class="info-item">
+        <ul class="info-list clear-ul">
+          <li class="info-item info-item--blue">
             <div class="info-item-wrap">
-              <h3 class="info-item-title">Настоящий городок</h3>
-              <p class="info-item-text">
+              <h3 class="info-item-title info-item-title--white">Настоящий городок</h3>
+              <p class="info-item-text info-item-text--white">
                 Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
             </div>
@@ -84,11 +84,11 @@
               Большинство едет в Гранд Каньон и толпится там
             </p>
           </li>
-          <li class="info-item">
+          <li class="info-item  info-item--blue">
             <img class="info-item-img" src="images/info/info-2.jpg" width="800" height="385" alt="Пейзаж: каньон, горы">
             <div class="info-item-wrap">
-              <h3 class="info-item-title">Там есть мост дьявола</h3>
-              <p class="info-item-text">
+              <h3 class="info-item-title info-item-title--white">Там есть мост дьявола</h3>
+              <p class="info-item-text info-item-text--white">
                 Да, по нему можно пройти! Если вы осмелитесь, разумеется
               </p>
             </div>
@@ -102,20 +102,20 @@
         <p class="advantages-text">
           Опытный персонал и качественное обслуживание!
         </p>
-        <ul class="advantages-list">
-          <li class="advantages-item">
+        <ul class="advantages-list clear-ul">
+          <li class="advantages-item advantages-item--home">
             <h3 class="advantages-item-title">Жильё</h3>
             <p class="advantages-item-text">
               Рекомендуем пожитьв настоящем мотеле, всё как в кино!
             </p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item--food">
             <h3 class="advantages-item-title">Еда</h3>
             <p class="advantages-item-text">
               Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
             </p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item--gift">
             <h3 class="advantages-item-title">Сувениры</h3>
             <p class="advantages-item-text">
               Не только китайского, но и настоящего местного производства!
@@ -131,7 +131,7 @@
         </p>
         <a class="btn hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
-      <section class="subscribe" data-test="subscribe">
+      <section class="subscribe subscribe--bg" data-test="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-text">
           Только полезная информация и никакого спама, честное бойскаутское!
@@ -139,13 +139,13 @@
         <form class="subscribe-form" action="http://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="subscribe-email">Укажите ваш e-mail</label>
           <input class="subscribe-form-input" type="email" name="subscribe-user-email" id="subscribe-email" placeholder="Ваш e-mail">
-          <button type="submit">Подписаться</button>
+          <button class="subscribe-form-btn" type="submit">Подписаться</button>
         </form>
       </section>
       <footer class="footer" data-test="footer">
         <section class="social">
           <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="social-list">
+          <ul class="social-list  clear-ul">
             <li class="social-item">
               <a class="social-item-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Vkontakte</span>
