--- a/index.html
+++ b/index.html
@@ -8,172 +8,173 @@
   </head>
 
   <body>
-    <header class="page-header container" data-test="header">
-      <a class="page-header-logo" aria-current="page" href="index.html">
-        <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
-      </a>
-      <nav class="navigation">
-        <ul class="navigation-list clear-ul">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-user clear-ul">
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#" data-test="search">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">
-              <span class="visually-hidden">Избранное</span>
-              <span>12</span>
-            </a>
-          </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link navigation-user-link--btn" href="#"> Хочу сюда!
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main-index" data-test="main">
-      <h1 class="visually-hidden">Седона - город в Аризоне</h1>
-      <section class="hero">
-        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img class="hero-image" src="images/hero-text.svg" width="458" height="352" alt='Welcome to the gorgeaus. SEDONA "Because the Grand Canyon sucks"'>
-      </section>
-      <section class="info container" id="info" data-test="hero">
-        <h2 class="info-title">
-          Седона — небольшой городок в Аризоне, заслуживающий большего!
-        </h2>
-        <p class="info-text">
-          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-        </p>
-        <ul class="info-list clear-ul">
-          <li class="info-item info-item--blue">
-            <div class="info-item-wrap">
-              <h3 class="info-item-title info-item-title--white">Настоящий городок</h3>
-              <p class="info-item-text info-item-text--white">
-                Седона — не аттракцион для туристов, там течёт своя жизнь
-              </p>
-            </div>
-            <img class="info-item-img" src="images/info/info-1.jpg" width="800" height="385" alt="Домики на фоне гор">
-          </li>
-          <li class="info-item">
-            <h3 class="info-item-title">Небольшая площадь</h3>
-            <p class="info-item-text">
-              Все достопримечательности находятся очень близко
-            </p>
-          </li>
-          <li class="info-item">
-            <h3 class="info-item-title">Красивая дорога</h3>
-            <p class="info-item-text">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
-            </p>
-          </li>
-          <li class="info-item">
-            <h3 class="info-item-title">Мало туристов</h3>
-            <p class="info-item-text">
-              Большинство едет в Гранд Каньон и толпится там
-            </p>
-          </li>
-          <li class="info-item  info-item--blue">
-            <img class="info-item-img" src="images/info/info-2.jpg" width="800" height="385" alt="Пейзаж: каньон, горы">
-            <div class="info-item-wrap">
-              <h3 class="info-item-title info-item-title--white">Там есть мост дьявола</h3>
-              <p class="info-item-text info-item-text--white">
-                Да, по нему можно пройти! Если вы осмелитесь, разумеется
-              </p>
-            </div>
-          </li>
-        </ul>
-      </section>
-      <section class="advantages" data-test="advantages">
-        <h2 class="advantages-title">
-          Приезжайте в Седону отдохнуть в комфорте и уюте!
-        </h2>
-        <p class="advantages-text">
-          Опытный персонал и качественное обслуживание!
-        </p>
-        <ul class="advantages-list clear-ul">
-          <li class="advantages-item advantages-item--home">
-            <h3 class="advantages-item-title">Жильё</h3>
-            <p class="advantages-item-text">
-              Рекомендуем пожитьв настоящем мотеле, всё как в кино!
-            </p>
-          </li>
-          <li class="advantages-item advantages-item--food">
-            <h3 class="advantages-item-title">Еда</h3>
-            <p class="advantages-item-text">
-              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
-            </p>
-          </li>
-          <li class="advantages-item advantages-item--gift">
-            <h3 class="advantages-item-title">Сувениры</h3>
-            <p class="advantages-item-text">
-              Не только китайского, но и настоящего местного производства!
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="hotel-search">
-        <h2 class="hotel-search-title">Заинтересовались?</h2>
-        <p class="hotel-search-text">
-          Укажите предполагаемые даты поездки,и мы покажем вам лучшие
-          предложения гостиниц в Седоне
-        </p>
-        <a class="btn hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
-      </section>
-      <section class="subscribe subscribe--bg" data-test="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-text">
-          Только полезная информация и никакого спама, честное бойскаутское!
-        </p>
-        <form class="subscribe-form" action="http://echo.htmlacademy.ru/" method="post">
-          <label class="visually-hidden" for="subscribe-email">Укажите ваш e-mail</label>
-          <input class="subscribe-form-input" type="email" name="subscribe-user-email" id="subscribe-email" placeholder="Ваш e-mail">
-          <button class="subscribe-form-btn" type="submit">Подписаться</button>
-        </form>
-      </section>
-      <footer class="footer" data-test="footer">
-        <section class="social">
-          <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="social-list  clear-ul">
-            <li class="social-item">
-              <a class="social-item-link" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Vkontakte</span>
+    <dev class="container">
+      <header class="page-header" data-test="header">
+        <a class="page-header-logo" aria-current="page" href="index.html">
+          <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
+        </a>
+        <nav class="navigation">
+          <ul class="navigation-list clear-ul">
+            <li class="navigation--item">
+              <a class="navigation-link" href="#">Главная</a>
+            </li>
+            <li class="navigation--item">
+              <a class="navigation-link" href="#">О седоне</a>
+            </li>
+            <li class="navigation--item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-user clear-ul">
+            <li class="navigation-user-item">
+              <a class="navigation-user-link" href="#" data-test="search">
+                <span class="visually-hidden">Поиск</span>
               </a>
             </li>
-            <li class="social-item">
-              <a class="social-item-link" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Telegram</span>
+            <li class="navigation-user-item">
+              <a class="navigation-user-link" href="#">
+                <span class="visually-hidden">Избранное</span>
+                <span class="navigation-user-link--favorites">12</span>
               </a>
             </li>
-            <li class="social-item">
-              <a class="social-item-link" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Youtube</span>
+            <li class="navigation-user-item">
+              <a class="navigation-user-link navigation-user-link--btn" href="#"> Хочу сюда!
               </a>
             </li>
           </ul>
+        </nav>
+      </header>
+      <main class="main-index" data-test="main">
+        <h1 class="visually-hidden">Седона - город в Аризоне</h1>
+        <section class="hero">
+          <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+          <img class="hero-image" src="images/hero-text.svg" width="458" height="352" alt='Welcome to the gorgeaus. SEDONA "Because the Grand Canyon sucks"'>
         </section>
-        <section class="contacts">
-          <h2 class="visually-hidden">Телефон для связи</h2>
-          <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+        <section class="info" id="info" data-test="hero">
+          <h2 class="info-title">Седона — небольшой городок в Аризоне, заслуживающий большего!
+          </h2>
+          <p class="info-text">
+            Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+          </p>
+          <ul class="info-list clear-ul">
+            <li class="info-item info-item--accent">
+              <div class="info-item-wrap">
+                <h3 class="info-item-title info-item-title--accent">Настоящий городок</h3>
+                <p class="info-item-text info-item-text--accent">
+                  Седона — не аттракцион для туристов, там течёт своя жизнь
+                </p>
+              </div>
+              <img class="info-item-img" src="images/info/info-1.jpg" width="800" height="385" alt="Домики на фоне гор">
+            </li>
+            <li class="info-item info-item--light">
+              <h3 class="info-item-title">Небольшая площадь</h3>
+              <p class="info-item-text">
+                Все достопримечательности находятся очень близко
+              </p>
+            </li>
+            <li class="info-item">
+              <h3 class="info-item-title">Красивая дорога</h3>
+              <p class="info-item-text">
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </li>
+            <li class="info-item info-item--light">
+              <h3 class="info-item-title">Мало туристов</h3>
+              <p class="info-item-text">
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </li>
+            <li class="info-item  info-item--accent">
+              <img class="info-item-img" src="images/info/info-2.jpg" width="800" height="385" alt="Пейзаж: каньон, горы">
+              <div class="info-item-wrap">
+                <h3 class="info-item-title info-item-title--accent">Там есть мост дьявола</h3>
+                <p class="info-item-text info-item-text--accent">
+                  Да, по нему можно пройти! Если вы осмелитесь, разумеется
+                </p>
+              </div>
+            </li>
+          </ul>
         </section>
-        <section class="site">
-          <h2 class="visually-hidden">Логотип htmlacademy</h2>
-          <a class="site-logo" href="https://htmlacademy.ru/">
-          </a>
+        <section class="advantages" data-test="advantages">
+          <h2 class="advantages-title">
+            Приезжайте в Седону отдохнуть в комфорте и уюте!
+          </h2>
+          <p class="advantages-text">
+            Опытный персонал и качественное обслуживание!
+          </p>
+          <ul class="advantages-list clear-ul">
+            <li class="advantages-item advantages-item--home">
+              <h3 class="advantages-item-title">Жильё</h3>
+              <p class="advantages-item-text">
+                Рекомендуем пожитьв настоящем мотеле, всё как в кино!
+              </p>
+            </li>
+            <li class="advantages-item advantages-item--food">
+              <h3 class="advantages-item-title">Еда</h3>
+              <p class="advantages-item-text">
+                Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+              </p>
+            </li>
+            <li class="advantages-item advantages-item--gift">
+              <h3 class="advantages-item-title">Сувениры</h3>
+              <p class="advantages-item-text">
+                Не только китайского, но и настоящего местного производства!
+              </p>
+            </li>
+          </ul>
         </section>
-      </footer>
-    </main>
+        <section class="hotel-search">
+          <h2 class="hotel-search--title">Заинтересовались?</h2>
+          <p class="hotel-search-text">
+            Укажите предполагаемые даты поездки,и мы покажем вам лучшие
+            предложения гостиниц в Седоне
+          </p>
+          <a class="btn hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
+        </section>
+        <section class="subscribe subscribe--img" data-test="subscribe">
+          <h2 class="subscribe--title">Подпишитесь на рассылку</h2>
+          <p class="subscribe--text">
+            Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
+          <form class="subscribe-form" action="http://echo.htmlacademy.ru/" method="post">
+            <label class="visually-hidden" for="subscribe-email">Укажите ваш e-mail</label>
+            <input class="subscribe-form-input" type="email" name="subscribe-user-email" id="subscribe-email" placeholder="Ваш e-mail">
+            <button class="subscribe-form-btn" type="submit">Подписаться</button>
+          </form>
+        </section>
+        <footer class="footer" data-test="footer">
+          <section class="social">
+            <h2 class="visually-hidden">Социальные сети</h2>
+            <ul class="social-list  clear-ul">
+              <li class="social-item">
+                <a class="social-item-link" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">Vkontakte</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-item-link" href="https://t.me/htmlacademy">
+                  <span class="visually-hidden">Telegram</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-item-link" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Youtube</span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="contacts">
+            <h2 class="visually-hidden">Телефон для связи</h2>
+            <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+          </section>
+          <section class="site">
+            <h2 class="visually-hidden">Логотип HTMLAcademy</h2>
+            <a class="site-logo" href="https://htmlacademy.ru/">
+            </a>
+          </section>
+        </footer>
+      </main>
+    </dev>
   </body>
 
 </html>
