--- a/index.html
+++ b/index.html
@@ -37,11 +37,8 @@
                 <span class="navigation-user-link--favorites">12</span>
               </a>
             </li>
-            <li class="navigation-user-item">
-              <a class="navigation-user-link navigation-user-link--btn" href="#"> Хочу сюда!
-              </a>
-            </li>
           </ul>
+          <a class="navigation-user-link navigation-user-link--btn" href="#"> Хочу сюда!</a>
         </nav>
       </header>
       <main class="main-index" data-test="main">
@@ -85,13 +82,13 @@
               </p>
             </li>
             <li class="info-item  info-item--accent">
-              <img class="info-item-img" src="images/info/info-2.jpg" width="800" height="385" alt="Пейзаж: каньон, горы">
               <div class="info-item-wrap">
                 <h3 class="info-item-title info-item-title--accent">Там есть мост дьявола</h3>
                 <p class="info-item-text info-item-text--accent">
                   Да, по нему можно пройти! Если вы осмелитесь, разумеется
                 </p>
               </div>
+              <img class="info-item-img" src="images/info/info-2.jpg" width="800" height="385" alt="Пейзаж: каньон, горы">
             </li>
           </ul>
         </section>
@@ -170,6 +167,7 @@
           <section class="site">
             <h2 class="visually-hidden">Логотип HTMLAcademy</h2>
             <a class="site-logo" href="https://htmlacademy.ru/">
+              <img class="site-logo-img" src="images/logo/logo-html-academy.svg" width="115" height="34" alt="Логотип HTMLAcademy">
             </a>
           </section>
         </footer>
